# sauron

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: checks.yml  ci.yml  lint.yml
docs/: README.md  _coverpage.md  _navbar.md  _sidebar.md  index.html
mordor/: .gitignore  README.md  vercel.json
mordor/api/: Cargo.toml  _util.rs  check.ts  sauron.rs  sauron_api.rs
mordor/docs/: README.md  _coverpage.md  duplicate.md  format.md  index.html  linter.md  rules.md  structure.md
sauron_cli/: Cargo.toml
sauron_cli/src/: main.rs
sauron_core/: Cargo.toml
sauron_core/src/: context.rs  diagnostic.rs  error.rs  lib.rs  rule.rs  syntax.rs
sauron_core/src/diagnostic/: message.rs
sauron_duplicate/: Cargo.toml
sauron_duplicate/src/: context.rs  diagnostic.rs  ditto.rs  frame.rs  lib.rs  rabin_karp.rs  tok.rs
sauron_fmt/: Cargo.toml
sauron_fmt/src/: context.rs  diagnostic.rs  lib.rs
sauron_lint/: Cargo.toml
sauron_lint/src/: context.rs  diagnostic.rs  lib.rs
sauron_linter/: Cargo.toml
sauron_linter/src/: context.rs  diagnostic.rs  lib.rs
sauron_structure/: Cargo.toml
sauron_structure/src/: context.rs  diagnostic.rs  lib.rs
sauron_structure/src/rules/: has_deps.rs  has_license.rs  has_mod.rs  has_readme.rs  mod.rs  no_index.rs  snake_case.rs
sauron_wasm/: Cargo.toml  mod.ts  sauron.ts  wasm.js
sauron_wasm/scripts/: build.ts
sauron_wasm/src/: lib.rs
src/: check.rs  colors.rs  context.rs  diagnostic.rs  error.rs  files.rs  lib.rs  main.rs  syntax.rs
src/cp/: duplicate.rs  frame.rs  mod.rs  rabin_karp.rs  tok.rs
src/diagnostic/: message.rs  mod.rs
src/linter/: mod.rs  rules.rs  syntax.rs
src/structure/: diagnostic.rs
src/structure/rules/: has_deps.rs  has_license.rs  has_mod.rs  has_readme.rs  mod.rs  no_index.rs  snake_case.rs
tools/: format.ts  lint.ts
