[package]
name = "nessie"
description = "Module linting tool for Deno"
repository = "https://github.com/denosaurs/nessie"
license = "MIT"
version = "0.1.1"
authors = ["Filippo Rossi", "Elias Sjögreen"]
edition = "2018"

[dependencies]
deno_lint = { version = "0.1.10", git = "https://github.com/denoland/deno_lint" }
swc_common = "0.5.12"
swc_atoms = "0.2.2"
swc_ecma_parser = "0.24.5"
swc_ecma_ast = "0.20.0"
swc_ecma_visit = "0.5.1"
serde = "1.0.111"
walkdir = "2.3.1"
regex = "1.3.9"
clap = "2.33.1"
prettytable-rs = "0.8.0"
termcolor = "1.1.0"
