[package]
name = "sauron"
description = "Module linting tool for Deno"
repository = "https://github.com/denosaurs/sauron"
license = "MIT"
version = "0.1.2"
authors = ["Filippo Rossi", "Elias Sjögreen"]
edition = "2018"

[[bin]]
name = "sauron"
path = "src/main.rs"

[dependencies]
deno_lint = "0.1.16"
swc_common = "0.6.2"
swc_atoms = "0.2.2"
swc_ecma_parser = "0.27.0"
swc_ecma_ast = "0.23.1"
swc_ecma_visit = "0.8.0"
serde = "1.0.114"
walkdir = "2.3.1"
regex = "1.3.9"
clap = "2.33.1"
prettytable-rs = "0.8.0"
termcolor = "1.1.0"
