[package]
name = "sauron"
description = "Module linting tool for Deno"
repository = "https://github.com/denosaurs/sauron"
license = "MIT"
version = "0.1.2"
authors = ["Filippo Rossi", "Elias Sjögreen"]
edition = "2018"

[[bin]]
name = "sauron"
path = "src/main.rs"

[dependencies]
deno_lint = "0.1.16"
serde = "1.0.114"
walkdir = "2.3.1"
regex = "1.3.9"
clap = "3.0.0-beta.1"
prettytable-rs = "0.8.0"
termcolor = "1.1.0"
