[package]
name = "sauron_duplicate"
description = ""
repository = "https://github.com/denosaurs/sauron"
license = "MIT"
version = "0.1.0"
authors = ["Filippo Rossi", "Elias Sjögreen"]
edition = "2018"

[dependencies]
sauron_core = { path = "../sauron_core" }
serde = "1.0"
colored = "2"
swc_atoms = "0.2"
swc_common = "=0.10.3"
swc_ecmascript = { version = "=0.8.3", features = ["parser", "visit"] }
