[package]
name = "sauron_fmt"
description = "deno fmt for sauron"
repository = "https://github.com/denosaurs/sauron"
license = "MIT"
version = "0.1.0"
authors = ["Filippo Rossi", "Elias Sjögreen"]
edition = "2018"

[dependencies]
sauron_core = { path = "../sauron_core" }
dprint-plugin-typescript = "0.32.2"
serde = "1.0"
colored = "2"
diff = "0.1.12"
