[package]
name = "sauron_lint"
description = "deno lint for sauron"
repository = "https://github.com/denosaurs/sauron"
license = "MIT"
version = "0.1.0"
authors = ["Filippo Rossi", "Elias Sjögreen"]
edition = "2018"

[dependencies]
sauron_core = { path = "../sauron_core" }
serde = "1.0"
colored = "2"
deno_lint = "0.2.3"
swc_ecmascript = { version = "=0.9.1", features = ["parser", "visit"] }
