[package]
name = "sauron_structure"
description = "Module linting tool for Deno"
repository = "https://github.com/denosaurs/sauron"
license = "MIT"
version = "0.1.0"
authors = ["Filippo Rossi"]
edition = "2018"

[dependencies]
sauron_core = { path = "../sauron_core" }
thiserror = "1.0"
serde = "1.0"
regex = "1.3"
colored = "2"
