[package]
name = "sauron_wasm"
description = "Sauron wasm support"
repository = "https://github.com/denosaurs/sauron/sauron_wasm"
license = "MIT"
version = "0.1.0"
authors = ["Elias Sjögreen"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.64", features = ["serde-serialize"] }
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = "0.1.6"
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"

sauron_core = { path = "../sauron_core" }
sauron_duplicate = { path = "../sauron_duplicate" }
sauron_fmt = { path = "../sauron_fmt" }
sauron_lint = { path = "../sauron_lint" }
sauron_structure = { path = "../sauron_structure" }

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[features]
default = [ "wee_alloc" ]
