[package]
name = "index"
version = "0.0.0"
authors = ["Elias Sjögreen"]
edition = "2018"

[dependencies]
http = "0.1"
now_lambda = "0.1"

sauron_core = { git = "https://github.com/denosaurs/sauron", branch = "main" }
sauron_fmt = { git = "https://github.com/denosaurs/sauron", branch = "main" }
sauron_lint = { git = "https://github.com/denosaurs/sauron", branch = "main" }
sauron_structure = { git = "https://github.com/denosaurs/sauron", branch = "main" }
sauron_duplicate = { git = "https://github.com/denosaurs/sauron", branch = "main" }

[lib]
name = "util"
path = "_util.rs"
