[package]
name = "index"
version = "0.0.0"
authors = [ "Elias Sjögreen", "Filippo Rossi" ]
edition = "2018"

[dependencies]
http = "0.1"
now_lambda = "0.1"

  [dependencies.sauron_core]
  git = "https://github.com/denosaurs/sauron"
  branch = "main"

  [dependencies.sauron_fmt]
  git = "https://github.com/denosaurs/sauron"
  branch = "main"

  [dependencies.sauron_lint]
  git = "https://github.com/denosaurs/sauron"
  branch = "main"

  [dependencies.sauron_structure]
  git = "https://github.com/denosaurs/sauron"
  branch = "main"

  [dependencies.sauron_duplicate]
  git = "https://github.com/denosaurs/sauron"
  branch = "main"

[lib]
name = "util"
path = "_util.rs"

[[bin]]
name = "sauron_api"
path = "/Users/rossi/dev/orgs/denosaurs/sauron/mordor/api/sauron_api.rs"
